project('cli', 'cpp', default_options : ['warning_level=3', 'cpp_std=c++17'])

executable('clitest', 'test.cpp')

executable('intro', 'examples/intro.cpp')
executable('example', 'examples/example.cpp')
executable('subcommands', 'examples/subcommands.cpp')
executable('customtypes', 'examples/customtypes.cpp')
